<resources>
    <string name="app_name">E-Meal</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mess_key">Mess Key</string>
    <string name="admin_mess">Admin Mess</string>
    <string name="my_mess">My Mess</string>

    <!-- adapter_bazarlist -->
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>


    <string name="totalcost">Total Cost</string>
    <string name="costvalue">Value</string>
    <string name="addvalue">+ADD</string>

    <string name="submit">Submit</string>


    //createmess
    <string name="create">Create</string>


</resources>
